Update: Refactor exceptions and command for Guild modules.