@@ -4,17 +4,16 @@ import io.papermc.paper.command.brigadier.CommandSourceStack;
 import java.time.Instant;
 import java.util.Collections;
 import java.util.Set;
-import net.kyori.adventure.text.Component;
-import net.kyori.adventure.text.format.NamedTextColor;
 import net.mineasterisk.mc.constant.attribute.PlayerAttribute;
 import net.mineasterisk.mc.constant.status.GuildStatus;
 import net.mineasterisk.mc.model.GuildModel;
 import net.mineasterisk.mc.repository.PlayerRepository;
 import net.mineasterisk.mc.service.GuildService;
-import net.mineasterisk.mc.util.PluginUtil;
+import net.mineasterisk.mc.util.LoggerUtil;
 import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
 import org.incendo.cloud.Command.Builder;
+import org.incendo.cloud.context.CommandContext;
 import org.incendo.cloud.paper.PaperCommandManager;
 import org.incendo.cloud.parser.standard.StringParser;
 import org.jetbrains.annotations.NotNull;
@@ -43,52 +42,60 @@ public class GuildCommand {
         .commandBuilder(this.rootCommandName)
         .literal("create")
         .required(nameArgument, StringParser.greedyStringParser())
-        .handler(
-            context -> {
-              final CommandSender sender = context.sender().getSender();
-              final String name = context.get(nameArgument);
-              final Instant now = Instant.now();
+        .handler(context -> this.create(context, nameArgument));
+  }
 
-              if (!(sender instanceof Player performedBy)) {
-                PluginUtil.getLogger()
-                    .warning(
-                        "Unable to execute Guild create command: Only Player is allowed to execute this command");
+  private void create(
+      final @NotNull CommandContext<@NotNull CommandSourceStack> context,
+      final @NotNull String nameArgument) {
+    final CommandSender sender = context.sender().getSender();
+    final String name = context.get(nameArgument);
+    final Instant now = Instant.now();
+
+    if (!(sender instanceof Player performedBy)) {
+      return;
+    }
+
+    final LoggerUtil logger =
+        new LoggerUtil(
+            performedBy, "Executed Guild create command", "Unable to execute Guild create command");
+
+    PlayerRepository.get(PlayerAttribute.UUID, performedBy.getUniqueId())
+        .thenAccept(
+            player -> {
+              if (player == null) {
+                logger.warn(
+                    "Player doesn't exist",
+                    String.format("Player %s is not initialized", performedBy.getUniqueId()));
 
                 return;
               }
 
-              PlayerRepository.get(PlayerAttribute.UUID, performedBy.getUniqueId())
+              final GuildModel guild =
+                  new GuildModel(
+                      now, player, name, player, GuildStatus.ACTIVE, Collections.emptySet());
+
+              GuildService.add(performedBy, guild)
                   .thenAccept(
-                      player -> {
-                        if (player == null) {
+                      (guildAdded) -> {
+                        if (!guildAdded) {
                           return;
                         }
 
-                        final GuildModel guild =
-                            new GuildModel(
-                                now,
-                                player,
-                                name,
-                                player,
-                                GuildStatus.ACTIVE,
-                                Collections.emptySet());
+                        guild.setPlayers(Set.of(player));
 
-                        GuildService.add(performedBy, guild)
-                            .thenRun(
-                                () -> {
-                                  guild.setPlayers(Set.of(player));
-                                  GuildService.update(performedBy, guild)
-                                      .thenRun(
-                                          () -> {
-                                            PluginUtil.getLogger()
-                                                .info(
-                                                    String.format(
-                                                        "Player %s created Guild %s",
-                                                        performedBy.getUniqueId(), name));
-                                            sender.sendMessage(
-                                                Component.text("Created Guild")
-                                                    .color(NamedTextColor.GREEN));
-                                          });
+                        GuildService.update(performedBy, guild)
+                            .thenAccept(
+                                guildUpdated -> {
+                                  if (!guildUpdated) {
+                                    return;
+                                  }
+
+                                  logger.success(
+                                      "Created Guild",
+                                      String.format(
+                                          "Player %s created Guild %s",
+                                          performedBy.getUniqueId(), guild.getName()));
                                 });
                       });
             });
